--- a/plugins/cisco_umbrella_destinations/plugin.spec.yaml
+++ b/plugins/cisco_umbrella_destinations/plugin.spec.yaml
@@ -351,7 +351,7 @@ actions:
       success:
         title: Success
         description: Successful returned value
-        type: destinationList
+        type: "[]destinationList"
         required: true
   dGet:
     title: Get Destinations
