plgn-143 add new filter fields to asset search, refactor asset search action

--- a/plugins/rapid7_insightvm_cloud/plugin.spec.yaml
+++ b/plugins/rapid7_insightvm_cloud/plugin.spec.yaml
@@ -4,7 +4,7 @@ products: [insightconnect]
 name: rapid7_insightvm_cloud
 title: Rapid7 InsightVM Cloud
 description: InsightVM is a powerful vulnerability management tool which finds, prioritizes, and remediates vulnerabilities. This plugin uses the InsightVM Cloud Integrations API to view assets and start scans
-version: 3.2.0
+version: 3.3.0
 vendor: rapid7
 support: rapid7
 supported_versions: ["InsightVM Cloud Integration API v4", "2022-08-10"]
@@ -1080,6 +1080,18 @@ actions:
         description: Vulnerability criteria to filter by
         type: string
         example: "vulnerability.categories IN ['example']"
+        required: false
+      current_time:
+        title: Current Time
+        description: The current date and time to compare against the asset state to detect changes
+        type: date
+        example: "2021-04-15T17:56:47Z"
+        required: false
+      comparison_time:
+        title: Comparison Time
+        description: The date and time to compare the asset current state against to detect changes
+        type: date
+        example: "2021-04-15T17:56:47Z"
         required: false
     output:
       assets:
