--- a/plugins/cisco_umbrella_destinations/plugin.spec.yaml
+++ b/plugins/cisco_umbrella_destinations/plugin.spec.yaml
@@ -1,26 +1,26 @@
 plugin_spec_version: v2
 extension: plugin
-products: [insightconnect]
+products: [ insightconnect ]
 name: cisco_umbrella_destinations
 title: Cisco Umbrella Destinations
 version: 3.1.0
-supported_versions: ["2022-03-08"]
+supported_versions: [ "2022-03-08" ]
 description: Cisco Umbrella Destinations allows users to manage, block, and allow network destinations based on policies within their organization
 vendor: rapid7
 support: rapid7
-status: []
+status: [ ]
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/cisco_umbrella_destinations
   license_url: https://github.com/rapid7/insightconnect-plugins/blob/master/LICENSE
   vendor_url: https://www.cisco.com
 tags:
-- cisco
-- umbrella
-- destinations
+  - cisco
+  - umbrella
+  - destinations
 hub_tags:
-  use_cases: [threat_detection_and_response]
-  keywords: [cisco, umbrella]
-  features: []
+  use_cases: [ threat_detection_and_response ]
+  keywords: [ cisco, umbrella ]
+  features: [ ]
 connection:
   api_key:
     title: API Key
@@ -224,6 +224,15 @@ actions:
   dlGetAll:
     title: Get All Destination Lists
     description: Retrieve all destination lists of organization
+    output:
+      data:
+        title: Data
+        description: List of all destination lists
+        type: "[]dlCollection"
+        required: false
+  dlFilterAll:
+    title: Filter Through All Destination Lists
+    description: Filter and Retrieve all destination lists of organization
     input:
       access:
         title: Access
