--- a/plugins/zoom/plugin.spec.yaml
+++ b/plugins/zoom/plugin.spec.yaml
@@ -8,6 +8,7 @@ version: 2.0.0
 vendor: rapid7
 support: rapid7
 status: []
+supported_versions: ["Zoom API v2.10"]
 tags: [zoom, chat]
 hub_tags:
   use_cases: [alerting_and_notifications, application_management, threat_detection_and_response, user_management]
@@ -214,6 +215,7 @@ actions:
         description: User details
         type: user
         required: true
+        example: {}
   create_user:
     title: Create User
     description: Create user associated to account
@@ -363,10 +365,10 @@ triggers:
         required: false
 
 tasks:
-
   monitor_sign_in_out_activity:
     title: Monitor Sign In and Out Activity
     description: Monitor sign in and out activity
+    input: null
     output:
       activity_logs:
         title: Activity Logs
