--- a/plugins/zoom/plugin.spec.yaml
+++ b/plugins/zoom/plugin.spec.yaml
@@ -12,7 +12,7 @@ supported_versions: ["Zoom API v2.10"]
 tags: [zoom, chat]
 hub_tags:
   use_cases: [alerting_and_notifications, application_management, threat_detection_and_response, user_management]
-  keywords: [chat]
+  keywords: [zoom, chat]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/zoom
