--- a/plugins/zoom/plugin.spec.yaml
+++ b/plugins/zoom/plugin.spec.yaml
@@ -9,10 +9,11 @@ vendor: rapid7
 support: rapid7
 status: []
 supported_versions: ["Zoom API v2.10"]
+cloud_ready: true
 tags: [zoom, chat]
 hub_tags:
   use_cases: [alerting_and_notifications, application_management, threat_detection_and_response, user_management]
-  keywords: [zoom, chat]
+  keywords: [zoom, chat, cloud_enabled]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/zoom
