--- a/plugins/ivanti_service_manager/plugin.spec.yaml
+++ b/plugins/ivanti_service_manager/plugin.spec.yaml
@@ -855,7 +855,7 @@ types:
     IsRunTicketClassification:
       title: Is Run Ticket Classification
       description: Is run ticket classification
-      type: string
+      type: boolean
       required: false
   journal_note:
     DisplayText:
